tests/A2/reject/varReject.ul
int foo(int x, int y){
    int z;
    z = 2;
}

void main(){
    int result;
    result = z;
}